<resources>
    <string name="app_name">To Do List App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Título da Tarefa</string>
    <string name="descricao">Descrição da Tarefa</string>
    <string name="data">Data para Realização</string>
    <string name="selectdata">SELECIONE A DATA</string>
    <string name="salvar">SALVAR</string>
    <string name="infoTarefa">Informe a Tarefa</string>
    <string name="infoData">Informe a data</string>
    <string name="tfAberta">Aberta</string>
    <string name="tfConcluida">Concluída</string>
    <string name="subtarefa">Subtarefa</string>

</resources>