<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CadTarefaFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titulo" />

    <EditText
        android:id="@+id/titulo_tarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />
    
    <TextView
        android:inputType="textImeMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/descricao"/>
    
    <EditText
        android:id="@+id/descricao_tarefa"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:text="@string/data"/>

    <Button
        android:backgroundTint="@color/green"
        android:id="@+id/bt_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/selectdata"
        />

    <Button
        android:backgroundTint="@color/green"
        android:id="@+id/bt_salva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/salvar"
        />




</FrameLayout>