<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DetalheTarefaFragment">


    <TextView
        android:id="@+id/tvContentTitulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titulo" />

    <TextView
        android:id="@+id/tvContentDescricao"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="match_parent"
        android:text="@string/descricao"/>


    <TextView
        android:id="@+id/tvContentData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:text="@string/data"/>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/verde"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         />



</androidx.constraintlayout.widget.ConstraintLayout>